@@ -769,21 +769,7 @@ public class TaskTracker
     for (TaskInProgress tip : tasksToClose.values()) {
       tip.jobHasFinished(false);
     }
-
-    // Shutdown local RPC servers.  Do them
-    // in parallel, as RPC servers can take a long
-    // time to shutdown.  (They need to wait a full
-    // RPC timeout, which might be 10-30 seconds.)
-    new Thread("RPC shutdown") {
-      @Override
-      public void run() {
-        if (taskReportServer != null) {
-          taskReportServer.stop();
-          taskReportServer = null;
-        }
-      }
-    }.start();
-
+    
     this.running = false;
         
     // Clear local storage
@@ -794,6 +780,11 @@ public class TaskTracker
     
     // shutdown RPC connections
     RPC.stopProxy(jobClient);
+    
+    if (taskReportServer != null) {
+      taskReportServer.stop();
+      taskReportServer = null;
+    }
   }
 
   /**
